# factoring

./: .gitignore  Cargo.toml  Dockerfile
src/: lib.rs  main.rs
static/: index.html
