[package]
name = "factoring"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = 3

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
static-files = "0.2.3"

[build-dependencies]
static-files = "0.2.3"